--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-
-/* Your CSS Code here. */
-.main{
-	width:200px;
-	background-color:purple;
-	border-left-color:green;
-	border-left-width: 5px;
-	padding:10px;
+/* Style for the container */
+.main {
+  width: 200px; 
+  background-color: purple; /* Background color */
+  border-left: 5px solid green; /* Left side border color and thickness */
+  padding: 10px; /* Padding on all sides */
+  box-sizing: border-box; /* Include padding and border in width */
 }
 
-.heading{
-	font-size:20px;
-	color:white;
-	text-decoration:underline;
+/* Style for the heading */
+.heading {
+  font-size: 20px; /* Font size */
+  color: white; /* Text color */
+  text-decoration: underline; /* Text decoration */
+  margin: 0; /* Remove default margin */
 }
